# pipeshard-mlsys26-ae

./: .dockerignore  .gitattributes  CITATION.cff  Dockerfile  README.md  compare_all_results.py  download_models.ps1  download_models.sh  install_docker.sh  llama-cpp-README.md  run_all_repro.ps1  run_all_repro.sh
common/: arg.cpp  common.cpp  common.h
examples/: CMakeLists.txt
examples/microbench/: CMakeLists.txt  concurrent_profiler.cpp  gpu_profiler.cpp
examples/speculative-simple/: speculative-simple.cpp
ggml/src/: ggml.c  (+3 more)
include/: llama.h
paper_results/: benchmark_summary_5090_base.csv  compare_figure2.py  compare_figure7.py  compare_table4.py  compare_table8.py  compare_table9.py  paper_results_figure2.csv  paper_results_figure7.csv  paper_results_table4.csv  paper_results_table8.csv  paper_results_table9.csv  plot_figure2.py  repro_figure2.ps1  repro_figure2.sh  repro_figure7.ps1  repro_figure7.sh  repro_table4.ps1  repro_table4.sh  repro_table5.ps1  repro_table5.sh  repro_table8.ps1  repro_table8.sh  repro_table9.ps1  repro_table9.sh
src/: CMakeLists.txt  llama-adapter.cpp  llama-adapter.h  llama-benchmark.cpp  llama-benchmark.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-kv-cache-pipe-shard.cpp  llama-kv-cache-pipe-shard.h  llama-kv-cache-unified.cpp  llama-kv-cache-unified.h  llama-kv-cells.h  llama-memory.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-pipeline-executor.cpp  llama-pipeline-executor.h  llama-pipeline.h  llama-plan-builder.cpp  llama-vram-allocator.cpp  llama.cpp
(+21 files in other folders)
